2005-01-03  Davyd Madeley  <davyd@madeley.id.au>

	* wireless/wireless-applet.c:
	* mixer/applet.c: Fix some file locations.

2005-01-03  Tomasz Kłoczko <kloczek@pld.org.pl>

	* gnome-applets/battstat/po/*: removed all files (all battstat
	  translations are now in central po/).

	* accessx-status/Makefile.am: removed -DGLADEDIR=$(gladedir) from
	  INCLUDES (not used anymore). INCLUDES moved on top (after SUBDIRS).

2005-01-03  Davyd Madeley  <davyd@madeley.id.au>

	* autogen.sh: Up requirement to automake-1.8.
	
	* Makefile.am:
	* battstat/Makefile.am:
	* battstat/sounds/Makefile.am:
	* charpick/Makefile.am:
	* drivemount/Makefile.am:
	* geyes/Makefile.am:
	* gkb-new/Makefile.am:
	* gswitchit/Makefile.am:
	* gtik/Makefile.am:
	* gweather/Makefile.am:
	* mini-commander/src/Makefile.am:
	* mixer/Makefile.am:
	* modemlights/Makefile.am:
	* multiload/Makefile.am:
	* stickynotes/Makefile.am: Clean up files for distcheck.

2005-01-02  Tomasz Kłoczko <kloczek@pld.org.pl>

	* configure.in:
	  Add base infrastructure for icons and pixmaps.
	* accessx-status/Makefile.am:
	  Remove -DPIXMAPDIR from INCLUDES.
	* accessx-status/applet.c:
	  Use GNOME_PIXMAPDIR defined in configure.in istead PIXMAPDIR.
	* accessx-status/pixmaps/Makefile.am:
	  Rename icons{dir,_DATA} to accessx_status_pixmaps{dir,_DATA}.
	  Define accessx_status_pixmapsdir as
	  $(pixmapsdir)/accessx-status-applet.
	* cdplayer/Makefile.am:
	  Removed double listed IMAGES from EXTRA_DIST.
	  Indentations in IMAGES, VARIABLES, EXTRA_DIST, *_SOURCES, *_DEPS.
	* cpufreq/pixmaps/Makefile.am:
	  Removed -DICONDIR from INCLUDES (unused).
	* drivemount/Makefile.am:
	  Rdefine desktop_iconsdir using $(iconsdir).
	  Indentations in drivemount_applet2_{SOURCES,LDADD}.
	* geyes/Makefile.am gtik/Makefile.am:
	  Redefine pixmapdir to desktop_iconsdir using $(iconsdir).
	* mini-commander/src/Makefile.am:
	  Rename bitmaps_DATA to BITMAPS. This bitmaps are directly included in