@@ -19,4 +19,8 @@ which gnome-autogen.sh || {
     echo "You need to install gnome-common from the GNOME CVS"
     exit 1
 }
-REQUIRED_AUTOMAKE_VERSION=1.8 USE_GNOME2_MACROS=1 USE_COMMON_DOC_BUILD=yes . gnome-autogen.sh
+REQUIRED_AUTOMAKE_VERSION=1.8 \
+USE_GNOME2_MACROS=1 \
+USE_COMMON_DOC_BUILD=yes \
+ACLOCAL_AMFLAGS=-I m4 \
+. gnome-autogen.sh
