@@ -1,3 +1,12 @@
+2005-01-03  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* Makefile.am:
+	* autogen.sh:
+	* configure.in:
+	* m4/ac-define-dir.m4:
+	  Add AC_DEFINE_DIR, m4 dir, and use it to properly get
+	  directories defined in config.h
+
 2005-01-03  Davyd Madeley  <davyd@madeley.id.au>
 
 	* wireless/wireless-applet.c:
